Aggiunto il Logout

--- a/client/app/pages/personal-page/personal-page.html
+++ b/client/app/pages/personal-page/personal-page.html
@@ -5,8 +5,8 @@
     </ion-title>
 
     <ion-buttons end>
-      <button class="solid">
-        <ion-icon name="log-out"> LogOut</ion-icon>
+      <button class="solid" (click)="logout()">
+        <ion-icon name="log-out" > LogOut</ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
