Impostato il menù laterale

--- a/client/app/pages/about-page/about-page.html
+++ b/client/app/pages/about-page/about-page.html
@@ -4,6 +4,11 @@
     About
   </ion-title>
 </ion-navbar>-->
+<ion-header>
+  <ion-navbar>
+
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding>
   <p>
