--- a/client/app/pages/contact-page/contact-page.html
+++ b/client/app/pages/contact-page/contact-page.html
@@ -4,6 +4,11 @@
     Contact
   </ion-title>
 </ion-navbar>-->
+<ion-header>
+  <ion-navbar>
+
+  </ion-navbar>
+</ion-header>
 
 <ion-content>
   <ion-list>
