--- a/client/app/pages/home-page/home-page.html
+++ b/client/app/pages/home-page/home-page.html
@@ -1,6 +1,11 @@
 <!--ion-navbar *navbar>
   <ion-title>Home</ion-title>
 </ion-navbar>-->
+<ion-header>
+  <ion-navbar>
+
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding class="page1">
   <h2>Welcome to Scriba!</h2>
@@ -41,5 +46,5 @@
   </ion-content>
 
   <p>Want to learn some facts?  Click below.</p>
-  <button (click)="goToFactsPage()">Scientific Facts</button><!--startDictation(event)-->
+  <button (click)="goToFactsPage()" >Scientific Facts</button><!---->
 </ion-content>
