--- a/client/app/pages/personal-page/personal-page.html
+++ b/client/app/pages/personal-page/personal-page.html
@@ -1,25 +1,47 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Scriba
-    </ion-title>
+    <button menuToggle><ion-icon name="menu"></ion-icon></button>
+
     <ion-buttons begin>
-      <button class="solid" (click)="userData()">
-        <ion-icon name="person" > {{user.name}} {{user.surname}}</ion-icon>
+      <button>
+        <ion-title>
+          Scriba
+        </ion-title>
+      </button>
+
+      <button (click)="userData()" start>
+        <ion-icon name="person"> {{user.name}} {{user.surname}}</ion-icon>
       </button>
     </ion-buttons>
+
     <ion-buttons end>
-      <button class="solid" (click)="logout()">
-        <ion-icon name="log-out" > LogOut</ion-icon>
+      <button (click)="logout()">
+        <ion-icon name="log-out" > Esci</ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
+<ion-menu [content]="menuContent">
+  <ion-toolbar>
+    <button menuClose ion-item><ion-icon name="menu" item-right></ion-icon><ion-title>Menu</ion-title></button>
+  </ion-toolbar>
+  <ion-content>
+    <ion-list>
+      <button (click)="openPage(EventsPage)" ion-item>I miei Eventi</button>
+      <button (click)="openPage(HomePage)" ion-item>Tutti gli Eventi</button>
+      <button (click)="openPage(AboutPage)" ion-item>Informazioni</button>
+      <button (click)="openPage(ContactPage)" ion-item>Contatti</button><!--detail-none-->
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
+<ion-nav #menuContent [root]="rootPage"></ion-nav>
 
+<!--
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab  tabIcon="home"></ion-tab>
+  <ion-tab  tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contatti" tabIcon="contacts"></ion-tab>
 </ion-tabs>
+-->
