Migliorata la meccanica di inserimento evento, ora più lineare; sistemato il fetch degli eventi, sessioni, interventi dal server

--- a/client/app/pages/home-page/home-page.html
+++ b/client/app/pages/home-page/home-page.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="page1">
+<ion-content padding>
   <h2>Welcome to Scriba!</h2>
   <p>
     Questa pagina mostra tutti gli eventi pubblici. Effettua il Login o Registrati per creare e gestire i tuoi eventi! 
@@ -44,7 +44,4 @@
       </ion-item>
     </ion-list>
   </ion-content>
-
-  <p>Want to learn some facts?  Click below.</p>
-  <button (click)="goToFactsPage()" >Scientific Facts</button><!---->
 </ion-content>
