--- a/client/app/pages/personal-events-page/personal-events-page.html
+++ b/client/app/pages/personal-events-page/personal-events-page.html
@@ -29,7 +29,7 @@
                     {{event.title}}
                 </ion-title>
                 <ion-buttons end>
-                    <button>
+                    <button (click)="openEvent(event)">
                         <ion-icon name="create"> </ion-icon>
                     </button>
                     <button>
