--- a/client/app/pages/session-page/session-page.html
+++ b/client/app/pages/session-page/session-page.html
@@ -53,10 +53,10 @@
                         <button (click)="openIntervent(intervent)">
                             <ion-icon name="navigate"> Apri </ion-icon>
                         </button>
-                        <button>
+                        <button (click)="editIntervent(intervent)">
                             <ion-icon name="create"> </ion-icon>
                         </button>
-                        <button>
+                        <button (click)="deleteIntervent(intervent)">
                             <ion-icon name="trash"> </ion-icon>
                         </button>
                     </ion-buttons>
