--- a/client/app/pages/modals/intervent/intervent-modal.html
+++ b/client/app/pages/modals/intervent/intervent-modal.html
@@ -10,9 +10,19 @@
     </ion-item>
 
     <ion-item >
-        <ion-label inline>Data</ion-label>
-        <ion-input type="datetime-local" ngControl="dateControl" min="{{currentDate | date:'yyyy-MM-dd'}}" class="form-control" [(ngModel)]="intervent.date" required></ion-input>
+        <ion-label inline>Inizio</ion-label>
+        <ion-input type="datetime-local" ngControl="timeControl" [(ngModel)]="intervent.date" #date="ngForm" required></ion-input>
     </ion-item>
+    <div *ngIf="date.value<=now && date.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
+    <div *ngIf="(date.value<session.startDate || date.value>session.endDate) && date.touched">La data di Inizio deve cadere durante la Sessione!</div>
+
+    <ion-item >
+        <ion-label inline>Durata (minuti)</ion-label>
+        <ion-input type="number" ngControl="durationControl" min="0" max="180" step="1" value="0" [(ngModel)]="intervent.duration" #duration="ngForm" required></ion-input>
+    </ion-item>
+    <div *ngIf="((date.value+duration.value)>session.endDate) && duration.touched">L'Intervento deve terminare durante la Sessione!</div>
+
+    <div *ngIf="overlapError.status">L'Intervento si sovrappone con "{{overlapError.intervent.title}}" programmato il {{overlapError.intervent.date}}, durata {{overlapError.intervent.duration}} minuti</div>
 
     <ion-item >
         <ion-label inline>Speaker (username)</ion-label>
@@ -20,7 +30,10 @@
     </ion-item>
 
     <ion-item>
-        <button type="submit" class="btn btn-standard" [disabled]="!interventForm.valid">Salva</button>
+        <button type="submit" class="btn btn-standard" [disabled]="!interventForm.valid ||
+                                                                    (date.value<=now && date.touched) ||
+                                                                    ((date.value<session.startDate || date.value>session.endDate) && date.touched) ||
+                                                                    (((date.value+duration.value)>session.endDate) && duration.touched)">Salva</button>
         <button type="reset" (click)="close()">Annulla</button>
     </ion-item>
 </form>
