--- a/client/app/pages/personal-events-page/personal-events-page.html
+++ b/client/app/pages/personal-events-page/personal-events-page.html
@@ -42,6 +42,7 @@
                     </button>
                 </ion-buttons>
             </ion-toolbar>
+            Dal: {{event.startDate}} - Al: {{event.endDate}}
         </ion-card-header>
         <ion-card-content>
           <p>
@@ -54,7 +55,7 @@
               <p>
                 <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
                 <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
-                  {{session.title}} - {{session.date}} --- {{session.expanded}}
+                  {{session.title}} - {{session.startDate}} --- {{session.expanded}}
               </p>
               <ion-list *ngIf="session.expanded">
                 <ion-item text-wrap *ngFor="let intervent of session.intervents">
