--- a/client/app/pages/session-page/session-page.html
+++ b/client/app/pages/session-page/session-page.html
@@ -6,9 +6,9 @@
     <ion-header padding>
         <ion-navbar>
             <ion-title>
-                {{session.title}}
+                {{session.title}} - Dal: {{session.startDate}} - Al: {{session.endDate}}
             </ion-title>
-            <ion-buttons *ngIf="!updating" end>
+            <ion-buttons *ngIf="!updating && session.status=='programmed'" end>
                 <button (click)="updating=!updating">
                     <ion-icon name="create"> </ion-icon>
                 </button>
@@ -22,13 +22,27 @@
             <ion-input type="text" ngControl="titleControl" [(ngModel)]="newData.title" required></ion-input>
         </ion-item>
 
-        <ion-item >
-            <ion-label inline>Data</ion-label>
-            <ion-input type="datetime-local" ngControl="dateControl" min="{{currentDate | date:'yyyy-MM-dd'}}" class="form-control" [(ngModel)]="newData.date" required></ion-input>
-        </ion-item>
-
         <ion-item>
-            <button type="submit" class="btn btn-standard" [disabled]="!sessionForm.valid">Salva</button>
+            <ion-label inline>Data Inizio</ion-label>
+            <ion-input type="datetime-local" ngControl="startDateControl" #sd="ngForm" [(ngModel)]="newData.startDate" ></ion-input>
+        </ion-item>
+        <div *ngIf="sd.value<=now && sd.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
+        <div *ngIf="(sd.value<event.startDate || sd.value>event.endDate) && sd.touched">La data di Inizio deve cadere durante l'Evento!</div>
+        
+        <ion-item>
+            <ion-label inline>Data Termine</ion-label>
+            <ion-input type="datetime-local" ngControl="endDateControl" #ed="ngForm" [(ngModel)]="newData.endDate" ></ion-input>
+        </ion-item>
+        <div *ngIf="sd.value>=ed.value && ed.touched">La Data di Termine deve essere POSTERIORE a quella di Inizio!</div>
+        <div *ngIf="(ed.value<event.startDate || ed.value>event.endDate) && ed.touched">La data di Termine deve cadere durante l'Evento!</div>
+        
+        <div *ngIf="overlapError.status">La Sessione si sovrappone con "{{overlapError.session.title}}" programmata dal {{overlapError.session.startDate}} al {{overlapError.session.endDate}}</div>
+        <ion-item>
+            <button type="submit" class="btn btn-standard" [disabled]="!sessionForm.valid ||
+                                                                        (sd.value<=now && sd.touched) ||
+                                                                        (sd.value>=ed.value && ed.touched) ||
+                                                                        ((sd.value<event.startDate || sd.value>event.endDate) && sd.touched) ||
+                                                                        ((ed.value<event.startDate || ed.value>event.endDate) && ed.touched)">Salva</button>
             <button type="reset" (click)="reset()">Annulla</button>
         </ion-item>
     </form>
@@ -53,14 +67,17 @@
                         <button (click)="openIntervent(intervent)">
                             <ion-icon name="navigate"> Apri </ion-icon>
                         </button>
+                        <!--
                         <button (click)="editIntervent(intervent)">
                             <ion-icon name="create"> </ion-icon>
                         </button>
+                        -->
                         <button (click)="deleteIntervent(intervent)">
                             <ion-icon name="trash"> </ion-icon>
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
+                Data: {{intervent.date}} - ({{intervent.duration}} minuti)
             </ion-card-header>
         </ion-card>
     </ion-list>
