--- a/client/www/index.html
+++ b/client/www/index.html
@@ -26,85 +26,7 @@
   
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
-  <span id="final_span"></span><span id="interim_span"></span>
-    <script>
-      var final_transcript = '';
-      var recognizing = false;
-          console.log("ciao");
-      //var socket = io.connect('http://localhost:48922');//"http://collab.di.uniba.it:48922"
-
-      if ('webkitSpeechRecognition' in window) {
-
-        var recognition = new webkitSpeechRecognition();
-
-        recognition.continuous = true;
-        recognition.interimResults = true;
-
-        recognition.onstart = function () {
-          recognizing = true;
-          console.log("RECOGNITION STARTED");
-        };
-
-        recognition.onerror = function (event) {
-          console.log(event.error);
-          console.log("RECOGNITION ERROR");
-        };
-
-        recognition.onend = function () {
-          console.log("RECOGNITION STOPPED");
-          if(recognizing){
-            recognition.start();
-            console.log("RECOGNITION RESTARTED");
-          }
-
-        };
-
-        recognition.onresult = function (event) {
-          var interim_transcript = '';
-          for (var i = event.resultIndex; i < event.results.length; ++i) {
-            if (event.results[i].isFinal) {
-              final_transcript += event.results[i][0].transcript;
-              console.log(event.results[i][0].transcript);
-              //recognition.stop();
-              //recognition.start();
-            //	socket.emit('client_message', {text: event.results[i][0].transcript});
-            } else {
-              interim_transcript += event.results[i][0].transcript;
-            }
-          }
-          final_transcript = capitalize(final_transcript);
-          final_span.innerHTML = linebreak(final_transcript);
-          interim_span.innerHTML = linebreak(interim_transcript);
-        };
-        
-      }
-
-      var two_line = /\n\n/g;
-      var one_line = /\n/g;
-      function linebreak(s) {
-        return s.replace(two_line, '<p></p>').replace(one_line, '<br>');
-      }
-
-      function capitalize(s) {
-        return s.replace(s.substr(0, 1), function (m) {
-          return m.toUpperCase();
-        });
-      }
-
-      function startDictation(event) {
-        if (recognizing) {
-          recognition.stop();
-          recognizing=false;
-          return;
-        }
-        final_transcript = '';
-
-        recognition.lang = 'it-IT';
-        recognition.start();
-        final_span.innerHTML = '';
-        interim_span.innerHTML = '';
-
-      }
-    </script>
+  
+  <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 </body>
 </html>
