--- a/client/app/pages/home-page/home-page.html
+++ b/client/app/pages/home-page/home-page.html
@@ -8,40 +8,61 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Scriba!</h2>
-  <p>
-    Questa pagina mostra tutti gli eventi pubblici. Effettua il Login o Registrati per creare e gestire i tuoi eventi! 
-  </p>
+    <ion-header padding>
+      <ion-navbar>
+          <ion-title>
+              Tutti Gli Eventi Pubblici
+          </ion-title>
+          <ion-buttons end>
+            <button (click)="newEvent()">
+              <ion-icon name="add"> Nuovo Evento</ion-icon>
+            </button>
+          </ion-buttons>
+      </ion-navbar>
+    </ion-header>
 
-  <ion-content>
-    <ion-list>
-      <ion-list-header>Eventi Pubblici, Clicca per Espandere</ion-list-header>
-      <ion-item text-wrap *ngFor="let event of events">
-        <p>
-          <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
-          <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
-            {{event.title}} (@{{event.location}}) - {{event.date}} --- {{event.expanded}}
-        </p>
-        <ion-list *ngIf="event.expanded">
-          <ion-item text-wrap *ngFor="let session of event.sessions">
-            <p>
-              <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
-              <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
-                {{session.title}} - {{session.date}} --- {{session.expanded}}
-            </p>
-            <ion-list *ngIf="session.expanded">
-            <ion-item text-wrap *ngFor="let intervent of session.intervents">
+    <ion-card *ngFor="let event of events">
+        <ion-card-header>
+            <ion-toolbar>
+                <ion-title>
+                    {{event.title}} (@{{event.location}})
+                </ion-title>
+                <ion-buttons end>
+                    <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                        <ion-icon name="play"> </ion-icon>
+                    </button>
+                    <!--------------- TODO REGISTRATI --------------
+                    <button (click)="openEvent(event)">
+                        <ion-icon name="play"> </ion-icon>
+                    </button>
+                    ----------------- REGISTRATI -------------->
+                </ion-buttons>
+            </ion-toolbar>
+            Dal: {{event.startDate}} - Al: {{event.endDate}}
+        </ion-card-header>
+        <ion-card-content>
+          <p>
+            <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
+            <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
+            Sessioni 
+          </p>
+          <ion-list *ngIf="event.expanded">
+            <ion-item text-wrap *ngFor="let session of event.sessions">
               <p>
-                <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
-                <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
-                  {{intervent.title}} - {{intervent.date}} --- {{intervent.expanded}}
+                <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
+                <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
+                  {{session.title}} - {{session.startDate}}
               </p>
-              
+              <ion-list *ngIf="session.expanded">
+                <ion-item text-wrap *ngFor="let intervent of session.intervents">
+                  <p>
+                    {{intervent.title}} - {{intervent.date}} --- {{intervent.status}}
+                  </p>
+                  
+                </ion-item>
+              </ion-list>
             </ion-item>
           </ion-list>
-          </ion-item>
-        </ion-list>
-      </ion-item>
-    </ion-list>
-  </ion-content>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
