--- a/client/app/pages/listen-intervent-page/listen-intervent-page.html
+++ b/client/app/pages/listen-intervent-page/listen-intervent-page.html
@@ -13,14 +13,14 @@
 
     <ion-card>
         <ion-card-header>
-            {{recognizing}}
-            <textarea id="text"></textarea>
             <ion-item>
                 <button (click)="close()">
                     Chiudi
                 </button>
             </ion-item>
         </ion-card-header>
+        <ion-card-content id="text">
+        </ion-card-content>
     </ion-card>
     
 </ion-content>
