--- a/client/app/pages/personal-home-page/personal-home-page.html
+++ b/client/app/pages/personal-home-page/personal-home-page.html
@@ -1,3 +1,6 @@
+<!--ion-navbar *navbar>
+  <ion-title>Home</ion-title>
+</ion-navbar>-->
 <ion-header>
   <ion-navbar>
 
@@ -22,6 +25,12 @@
                 <ion-buttons end>
                     <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
                         <ion-icon name="play"> </ion-icon>
+                    </button>
+                    <button *ngIf="user.observedEvents.indexOf(event._id) == -1" (click)="observe(event)">
+                        <ion-icon name="eye"> </ion-icon>
+                    </button>
+                    <button *ngIf="user.observedEvents.indexOf(event._id) != -1" (click)="unobserve(event)">
+                        <ion-icon name="eye-off"> </ion-icon>
                     </button>
                 </ion-buttons>
             </ion-toolbar>
