--- a/client/app/pages/joined-events-page/joined-events-page.html
+++ b/client/app/pages/joined-events-page/joined-events-page.html
@@ -8,7 +8,7 @@
     <ion-header padding>
       <ion-navbar>
           <ion-title>
-              Tutti Gli Eventi Pubblici
+              Eventi Seguiti
           </ion-title>
       </ion-navbar>
     </ion-header>
@@ -22,6 +22,9 @@
                 <ion-buttons end>
                     <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
                         <ion-icon name="play"> </ion-icon>
+                    </button>
+                    <button  (click)="delete(event)">
+                        <ion-icon name="trash"> </ion-icon>
                     </button>
                 </ion-buttons>
             </ion-toolbar>
@@ -43,7 +46,12 @@
               <ion-list *ngIf="session.expanded">
                 <ion-item text-wrap *ngFor="let intervent of session.intervents">
                   <p>
+                    <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                    <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
                     {{intervent.title}} - {{intervent.date}} --- {{intervent.status}}
+                  </p>
+                  <p *ngIf="intervent.expanded">
+                      {{intervent.text}}
                   </p>
                   
                 </ion-item>
